--- a/v2/about/designer-developer.html
+++ b/v2/about/designer-developer.html
@@ -60,9 +60,9 @@
     <div class="body">
     
     <div id="intro" class="section">
+        <h2>Working as a Designer and Front End Developer</h2>
         <div class="column-container col1 segment">
             <div class="column">
-            <h2>Working as a Designer and Developer</h2>
             <p>During the first 8 years of my career, I switched between web design, front-end development, and UI design roles. While my focus was mostly on the creative side, I also had to learn how to build products, which pushed me to develop a systematic way of thinking to complement my creativity.</p>
             <h3>A unique learning experience</h3>
             <p>This dual role gave me a lot of experiences and challenges as the industry evolved. I dealt with everything from table-based layouts and the introduction of CSS to the frustrations of IE6, as well as responsive design, MySQL, JS, SEO, and mobile-first design. My design skills also broadened during this time to include a wide range of product and visual design skills, as I was the lead designer within the organization.</p>
