--- a/ebisu/cn/index.html
+++ b/ebisu/cn/index.html
@@ -15,9 +15,9 @@
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/cn/" title="" class="active">首页</a>
-      <a href="/cn/定价/" title="">定价</a>
-      <a href="/cn/联系我们/" title="">联系我们</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/" title="" class="active">首页</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">定价</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" title="">联系我们</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -25,8 +25,8 @@
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">中文</a>
-      <a href="/" class="">日本語</a>
-      <a href="/en/" class="">English</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/" class="">日本語</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/" class="">English</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
@@ -45,7 +45,7 @@
           日本税务会计服务
         </h1>
         <p>您是否在寻找高效的企业财务管理和可靠的税务合规服务？我们的记账代办服务是理想的解决方案。经验丰富的会计团队确保清晰准确的账目记录，我们的日本税务会计将负责税务申报，确保所有申报严格遵守法律。专注于经营您的业务，我们将管理您的财务和税务事务。</p>
-        <a href="#" class="button" title="联系">联系</a>
+        <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" class="button" title="联系">联系</a>
       </div>
       <div class="col">
         <span class="img"></span>
@@ -148,7 +148,7 @@
         <p>我们提供专业的记账代办和税务申报服务，帮助企业有效管理账簿，确保税务合规，减少税务负担，解放企业的财务管理，让企业可以专注于发展和市场扩展。</p>
         <p>我们了解从中国来到日本创业的挑战，以及初创企业在资金方面所面临的困境。因此，我们为初创企业提供特别优惠的服务包，帮助缓解创业初期的财务压力，承诺成为您在日本可信赖的商业合作伙伴。</p>
         <p>期待您的咨询！</p>
-        <a href="#" class="button" title="">联系</a>
+        <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" class="button" title="">联系</a>
       </div>
     </div>
   </section>
