--- a/ebisu/en/index.html
+++ b/ebisu/en/index.html
@@ -17,9 +17,9 @@
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/en/" title="" class="active">Home</a>
-      <a href="/en/pricing/" title="">Pricing</a>
-      <a href="/en/contact/" title="">Contact</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/" title="" class="active">Home</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/pricing/" title="">Pricing</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" title="">Contact</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -27,8 +27,8 @@
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">English</a>
-      <a href="/" class="">日本語</a>
-      <a href="/cn/" class="">中文</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/" class="">日本語</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/" class="">中文</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
@@ -47,7 +47,7 @@
           Japanese Tax Accountant Services
         </h1>
         <p>Looking for efficient corporate financial management and reliable tax compliance? Our bookkeeping services are the ideal solution. Our experienced accounting staff ensures clear and accurate records, and our certified Japanese tax accountants handle tax filings, ensuring all submissions strictly comply with the law. Focus on running your business while we manage your financial and tax affairs.</p>
-        <a href="#" class="button" title="Contact">Contact</a>
+        <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" class="button" title="Contact">Contact</a>
       </div>
       <div class="col">
         <span class="img"></span>
@@ -150,7 +150,7 @@
         <p>We provide professional bookkeeping and tax filing services, effectively managing company books, ensuring tax compliance, reducing taxes, and allowing businesses to focus on growth and market expansion without worrying about financial management.</p>
         <p>We understand the challenges faced by startups coming from China and the financial difficulties they encounter. To help alleviate the initial financial pressures, we offer special preferential service packages for startup businesses and promise to be a trusted business partner in Japan.</p>
         <p>We look forward to your inquiry!</p>
-        <a href="#" class="button" title="">Contact</a>
+        <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" class="button" title="">Contact</a>
       </div>
     </div>
   </section>
