--- a/ebisu/en/pricing/index.html
+++ b/ebisu/en/pricing/index.html
@@ -32,9 +32,9 @@ Sunday - 2.5hrs
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav class="primary">
-      <a href="/en/" title="">Home</a>
-      <a href="/en/pricing/" title="" class="active">Pricing</a>
-      <a href="/en/contact/" title="">Contact</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/" title="">Home</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/pricing/" title="" class="active">Pricing</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" title="">Contact</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -42,8 +42,8 @@ Sunday - 2.5hrs
     </nav>
     <nav class="language">
       <a href="#" title="">English</a>
-      <a href="/cn/定价/" title="">Chinese</a>
-      <a href="/料金のご案内/" title="">Japanese</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">Chinese</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">Japanese</a>
     </nav>
   </header>
   <!-- END -->
