--- a/ebisu/index.html
+++ b/ebisu/index.html
@@ -27,9 +27,9 @@ FOOTER
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/" title="" class="active">ホーム</a>
-      <a href="/料金のご案内/" title="">料金のご案内</a>
-      <a href="/お問い合わせ/" title="">お問い合わせ</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/" title="" class="active">ホーム</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">料金のご案内</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" title="">お問い合わせ</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -37,8 +37,8 @@ FOOTER
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">日本語</a>
-      <a href="/cn/" class="">中文</a>
-      <a href="/en/" class="">English</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/" class="">中文</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/" class="">English</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
