--- a/ebisu/料金のご案内/index.html
+++ b/ebisu/料金のご案内/index.html
@@ -32,9 +32,9 @@ Sunday - 2.5hrs
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/" title="">ホーム</a>
-      <a href="/料金のご案内/" title="">料金のご案内</a>
-      <a href="/お問い合わせ/" title="" class="active">お問い合わせ</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/" title="">ホーム</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">料金のご案内</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" title="" class="active">お問い合わせ</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -42,8 +42,8 @@ Sunday - 2.5hrs
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">日本語</a>
-      <a href="/en/pricing/" class="">English</a>
-      <a href="/cn/定价/" class="">中文</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/pricing/" class="">English</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" class="">中文</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
