--- a/ebisu/cn/联系我们/index.html
+++ b/ebisu/cn/联系我们/index.html
@@ -17,9 +17,9 @@
   <header>
     <a class="logo">惠比寿会计</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/cn/" title="">首页</a>
-      <a href="/cn/定价/" title="">定价</a>
-      <a href="/cn/联系我们/" title="" class="active">联系方式</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/" title="">首页</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">定价</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" title="" class="active">联系方式</a>
     </nav>
     <nav class="social">
       <a href="#" title="">LINE</a>
@@ -27,8 +27,8 @@
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">中文</a>
-      <a href="/お問い合わせ/" class="">日本語</a>
-      <a href="/en/contact/" class="">English</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" class="">日本語</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" class="">English</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
