--- a/ebisu/en/contact/index.html
+++ b/ebisu/en/contact/index.html
@@ -17,9 +17,9 @@
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/en/" title="">Home</a>
-      <a href="/en/pricing/" title="">Pricing</a>
-      <a href="/en/contact/" title="" class="active">Contact</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/" title="">Home</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/pricing/" title="">Pricing</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" title="" class="active">Contact</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -27,8 +27,8 @@
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">English</a>
-      <a href="/お問い合わせ/" class="">日本語</a>
-      <a href="/cn/联系我们/" class="">中文</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" class="">日本語</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" class="">中文</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
