--- a/ebisu/お問い合わせ/index.html
+++ b/ebisu/お問い合わせ/index.html
@@ -17,9 +17,9 @@
   <header>
     <a class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
-      <a href="/" title="">ホーム</a>
-      <a href="/料金のご案内/" title="">料金のご案内</a>
-      <a href="/お問い合わせ/" title="" class="active">お問い合わせ</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/" title="">ホーム</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">料金のご案内</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" title="" class="active">お問い合わせ</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -27,8 +27,8 @@
     </nav>
     <nav id="lang" class="language button outline md">
       <a href="#" class="">日本語</a>
-      <a href="/en/contact/" class="">English</a>
-      <a href="/cn/联系我们/" class="">中文</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/en/contact/" class="">English</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" class="">中文</a>
     </nav>
     <div class="menu-icon" id="menu-icon">
       <div class="bar1"></div>
