--- a/ebisu/cn/index.html
+++ b/ebisu/cn/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- HEADER  -->
   <header>
-    <a class="logo">Ebisu Accounting</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/cn/" class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/cn/" title="" class="active">首页</a>
       <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">定价</a>
