--- a/ebisu/cn/定价/index.html
+++ b/ebisu/cn/定价/index.html
@@ -9,25 +9,14 @@
 <meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
-<link rel="stylesheet" href="../assets/css/core.css">
-<link rel="stylesheet" href="../assets/css/styles.css">
-
-<!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
-<!--script src="https://code.jquery.com/jquery-3.5.1.min.js"></script-->
-<!--
-HEADER
-1. HERO
-2. SERVICES
-3. BENEFITS
-4. DETAILS
-5. TESTIMONIALS
-FOOTER
--->
+<link rel="stylesheet" href="../../assets/css/core.css">
+<link rel="stylesheet" href="../../assets/css/styles.css">
+<script src="../../assets/js/core.js"></script>
 </head>
 <body>
  <!-- HEADER  -->
  <header>
-  <a class="logo">惠比寿会计</a>
+  <a href="http://peteroper.github.io/portfolio/ebisu/cn/" class="logo">惠比寿会计</a>
   <nav id="mobi-menu" class="primary">
     <a href="http://peteroper.github.io/portfolio/ebisu/cn/" title="">首页</a>
     <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">定价</a>
