--- a/ebisu/cn/联系我们/index.html
+++ b/ebisu/cn/联系我们/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- HEADER  -->
   <header>
-    <a class="logo">惠比寿会计</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/cn/" class="logo">惠比寿会计</a>
     <nav id="mobi-menu" class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/cn/" title="">首页</a>
       <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">定价</a>
