--- a/ebisu/en/index.html
+++ b/ebisu/en/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- HEADER  -->
   <header>
-    <a class="logo">Ebisu Accounting</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/en/" class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/en/" title="" class="active">Home</a>
       <a href="http://peteroper.github.io/portfolio/ebisu/en/pricing/" title="">Pricing</a>
