--- a/ebisu/en/pricing/index.html
+++ b/ebisu/en/pricing/index.html
@@ -9,8 +9,9 @@
 <meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
-<link rel="stylesheet" href="../assets/css/core.css">
-<link rel="stylesheet" href="../assets/css/styles.css">
+<link rel="stylesheet" href="../../assets/css/core.css">
+<link rel="stylesheet" href="../../assets/css/styles.css">
+<script src="../../assets/js/core.js"></script>
 
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <!--script src="https://code.jquery.com/jquery-3.5.1.min.js"></script-->
@@ -30,7 +31,7 @@ Sunday - 2.5hrs
 <body>
   <!-- HEADER  -->
   <header>
-    <a class="logo">Ebisu Accounting</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/en/" class="logo">Ebisu Accounting</a>
     <nav class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/en/" title="">Home</a>
       <a href="http://peteroper.github.io/portfolio/ebisu/en/pricing/" title="" class="active">Pricing</a>
