--- a/ebisu/index.html
+++ b/ebisu/index.html
@@ -25,7 +25,7 @@ FOOTER
 <body>
   <!-- HEADER  -->
   <header>
-    <a class="logo">Ebisu Accounting</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/" class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/" title="" class="active">ホーム</a>
       <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">料金のご案内</a>
