--- a/ebisu/en/contact/index.html
+++ b/ebisu/en/contact/index.html
@@ -8,9 +8,9 @@
 <meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
-<link rel="stylesheet" href="../../assets/css/core.css">
-<link rel="stylesheet" href="../../assets/css/styles.css">
-<script src="../../assets/js/core.js"></script>
+<link rel="stylesheet" href="http://peteroper.github.io/portfolio/ebisu/assets/css/core.css">
+<link rel="stylesheet" href="http://peteroper.github.io/portfolio/ebisu/assets/css/styles.css">
+<script src="http://peteroper.github.io/portfolio/ebisu/assets/js/core.js"></script>
 </head>
 <body>
   <!-- HEADER  -->
