--- a/ebisu/en/index.html
+++ b/ebisu/en/index.html
@@ -10,7 +10,7 @@
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="http://peteroper.github.io/portfolio/ebisu/assets/css/core.css">
 <link rel="stylesheet" href="http://peteroper.github.io/portfolio/ebisu/assets/css/styles.css">
-<script src="http://peteroper.github.io/portfolio/ebisu/assets/js/core.js"></script>
+<script src="../assets/js/core.js"></script>
 </head>
 <body>
   <!-- HEADER  -->
