--- a/ebisu/en/pricing/index.html
+++ b/ebisu/en/pricing/index.html
@@ -9,9 +9,9 @@
 <meta name="theme-color" content="#FFF">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
-<link rel="stylesheet" href="http://peteroper.github.io/portfolio/ebisu/assets/css/core.css">
-<link rel="stylesheet" href="http://peteroper.github.io/portfolio/ebisu/assets/css/styles.css">
-<script src="http://peteroper.github.io/portfolio/ebisu/assets/js/core.js"></script>
+<link rel="stylesheet" href="../../assets/css/core.css">
+<link rel="stylesheet" href="../../assets/css/styles.css">
+<script src="../../assets/js/core.js"></script>
 
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <!--script src="https://code.jquery.com/jquery-3.5.1.min.js"></script-->
