--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -1,4 +1,4 @@
-<html> 
+<html class="page-index"> 
 <head>
 <title>Peter Roper Design</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
@@ -45,39 +45,95 @@ FOOTER
         <a href="/pages/about/" class="button outline" title="">More about me</a>
     </section>
 
-    <section id="casestudy1" class="casestudy">
+    <section id="casestudy-au" class="casestudy">
+        <div class="heading">
+            <h2>Casestudies</h2>
+        </div>
         <span class="img"></span>
         <div class="content">
-            <h3><a href="/pages/casestudy/content-design/" title="">Evolution of content design</a></h3>
+            <h3><a href="/pages/casestudy/content-design/" title="">Conceptualising the design <br class="dt-set" /> of an au content app</a></h3>
         </div>
     </section>
 
-    <section id="casestudy2" class="casestudy">
+    <section id="casestudy-au2" class="casestudy">
         <span class="img"></span>
         <div class="content">
-            <h3><a href="/pages/casestudy/system-ui/" title="">Refining system UI and<br class="dt-set" /> eliminating user pain points</a></h3>
+            <h3><a href="/pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
 
-    <section id="casestudy3" class="casestudy flex">
-        <div class="col">
+    <section id="casestudy-home+" class="casestudy">
+        <span class="img"></span>
+        <div class="content">
+            <h3><a href="/pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
+        </div>
+    </section>
+
+    <section id="casestudy-flip" class="casestudy flip">
+        <span class="img"></span>
+        <div class="content">
+            <h3><a href="/casestudy/system-ui/" title="">Flip Japan</a></h3>
+        </div>
+    </section>
+
+    <!--section id="" class="casestudy pulse">
+        <span class="img"></span>
+        <div class="content">
+            <h3><a href="/casestudy/system-ui/" title="">Pulse Football</a></h3>
+        </div>
+    </section-->
+
+    <section id="journal" class="casestudy">
+        <div class="heading">
+            <h2>Design Journal</h2>
+            <p>A sample of day to day work and processes</p>
+        </div>
+        <div class="flex">
+            <div class="col">
+                <span class="img"></span>
+                <div class="content">
+                    <h4><a href="/pages/journal/figma-variables/" title="">Optimizing Figma variables<br /> for developer handoff</a></h4>
+                </div>
+            </div>
+            <div class="col">
+                <span class="img"></span>
+                <div class="content">
+                    <h4><a href="/pages/journal/design-inspection/" title="">Syncing a Design inspection<br /> alongside UAT</a></h4>
+                </div>
+            </div>
+            <div class="col">
+                <span class="img"></span>
+                <div class="content">
+                    <h4><a href="/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
+                </div>
+            </div>
+            <div class="col">
+                <span class="img"></span>
+                <div class="content">
+                    <h4><a href="/pages/journal/content-design/" title="">title</a></h4>
+                </div>
+            </div>
+            </div>
+    </section>
+
+    
+    <section id="showcase" class="casestudy">
+        <div class="heading">
+            <h2>Showcase</h2>
+        </div>
+        <div id="casestudy-pulse" class="col">
             <span class="img"></span>
             <div class="content">
-                <h4><a href="/pages/casestudy/figma-variables/" title="">Optimizing Figma variables for development</a></h4>
-            </div>
-        </div>
-        <div class="col">
-            <span class="img"></span>
-            <div class="content">
-                <h4><a href="/casestudy/content-design/" title="">Syncing a Design inspection alongside UAT</a></h4>
+                <h4><a href="/pages/showcase/pulse-football/" title="">Pulse Football</a></h4>
             </div>
         </div>
     </section>
-
-    <section id="casestudy4" class="casestudy">
-        <span class="img"></span>
-        <div class="content">
-            <h3><a href="/casestudy/system-ui/" title="">Casestudy Name</a></h3>
+    <section id="showcase" class="casestudy">
+        <div id="casestudy-adventure" class="col">
+            <span class="img"></span>
+            <div class="content">
+                <h4><a href="/showcase/adventure-cards/" title="">Every Adventure</a></h4>
+            </div>
         </div>
     </section>
 
