--- a/boselecta/pages/casestudy/initial-experience/index.html
+++ b/boselecta/pages/casestudy/initial-experience/index.html
@@ -1,4 +1,4 @@
-<html> 
+<html class="page-casestudy"> 
 <head>
 <title>Peter Roper Design</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
@@ -26,7 +26,7 @@ HEADER
 FOOTER
 -->
 </head>
-<body>
+<body id="initial-experience">
     <!-- HEADER  -->
     <header>
         <div class="brand">
@@ -34,9 +34,9 @@ FOOTER
             <small>Product Designer</small>
         </div>
     </header>
-    <section id="intro" class="content casestuide">
+    <section id="intro" class="content casestudy">
         <h2>
-            Conceptualising the design <br class="dt-set" /> of an au content app
+            Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app
         </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
         <a class="button" style="display: none;"></a>
