--- a/boselecta/pages/casestudy/iteration-testing/index.html
+++ b/boselecta/pages/casestudy/iteration-testing/index.html
@@ -34,9 +34,9 @@ FOOTER
             <small>Product Designer</small>
         </div>
     </header>
-    <section id="intro" class="content casestuide">
+    <section id="intro" class="content casestudy">
         <h2>
-            Conceptualising the design <br class="dt-set" /> of an au content app
+            Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal
         </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
         <a class="button" style="display: none;"></a>
