--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -33,21 +33,22 @@ FOOTER
         </div>
     </header>
     <!-- INTRO  -->
-    <section id="intro" class="content casestudy">
+    <section id="intro" class="content fade">
         
         <h2>
-            Hi I'm Peter <br />
+            Hi, I'm Peter <br />
             A British <!--🇬🇧--> Product Designer<br />
             Based in Tokyo<br />
-            With 20+ years hands on 🖖 XP
+            With 20+ years hands on 👋 XP
         </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
         <a href="/pages/about/" class="button outline" title="">More about me</a>
     </section>
 
-    <section id="casestudy-au" class="casestudy">
+    <section id="casestudy-au" class="fade casestudy">
         <div class="heading">
             <h2>Casestudies</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. </p>
         </div>
         <span class="img"></span>
         <div class="content">
@@ -55,21 +56,21 @@ FOOTER
         </div>
     </section>
 
-    <section id="casestudy-au2" class="casestudy">
+    <section id="casestudy-au2" class="fade casestudy">
         <span class="img"></span>
         <div class="content">
             <h3><a href="/pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
 
-    <section id="casestudy-home+" class="casestudy">
+    <section id="casestudy-home+" class="fade casestudy">
         <span class="img"></span>
         <div class="content">
             <h3><a href="/pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
         </div>
     </section>
 
-    <section id="casestudy-flip" class="casestudy flip">
+    <section id="casestudy-flip" class="fade casestudy flip">
         <span class="img"></span>
         <div class="content">
             <h3><a href="/casestudy/system-ui/" title="">Flip Japan</a></h3>
@@ -83,7 +84,7 @@ FOOTER
         </div>
     </section-->
 
-    <section id="journal" class="casestudy">
+    <section id="journal" class="fade casestudy">
         <div class="heading">
             <h2>Design Journal</h2>
             <p>A sample of day to day work and processes</p>
@@ -117,22 +118,25 @@ FOOTER
     </section>
 
     
-    <section id="showcase" class="casestudy">
+    <section id="showcase" class="fade casestudy">
         <div class="heading">
             <h2>Showcase</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. </p>
         </div>
         <div id="casestudy-pulse" class="col">
             <span class="img"></span>
             <div class="content">
-                <h4><a href="/pages/showcase/pulse-football/" title="">Pulse Football</a></h4>
+                <h3><a href="/pages/showcase/pulse-football/" title="">Pulse Football</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. </p>
             </div>
         </div>
     </section>
-    <section id="showcase" class="casestudy">
+    <section id="showcase" class="fade casestudy">
         <div id="casestudy-adventure" class="col">
             <span class="img"></span>
             <div class="content">
-                <h4><a href="/showcase/adventure-cards/" title="">Every Adventure</a></h4>
+                <h3><a href="/showcase/adventure-cards/" title="">Every Adventure</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada.</p>
             </div>
         </div>
     </section>
