--- a/boselecta/pages/casestudy/content-design/index.html
+++ b/boselecta/pages/casestudy/content-design/index.html
@@ -34,7 +34,7 @@ FOOTER
             <small>Product Designer</small>
         </div>
     </header>
-    <section id="intro" class="content casestuide">
+    <section id="intro" class="content fade">
         <h2>
             Conceptualising the design <br class="dt-set" /> of an au content app
         </h2>
