--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -37,18 +37,18 @@ FOOTER
         
         <h2>
             Hi, I'm Peter <br />
-            A British <!--🇬🇧--> Product Designer<br />
-            Based in Tokyo<br />
+            A British <!--🇬🇧--> Product Designer<br class="dt-set" />
+            Based in Tokyo<br class="dt-set" />
             With 20+ years hands on 👋 XP
         </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
         <a href="/pages/about/" class="button outline" title="">More about me</a>
     </section>
 
-    <section id="casestudy-au" class="fade casestudy">
+    <section id="casestudy" class="fade casestudy">
         <div class="heading">
             <h2>Casestudies</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. </p>
+            <p>Casestudies of processes, challenges &amp; solutions from my daily work.</p>
         </div>
         <span class="img"></span>
         <div class="content">
@@ -56,21 +56,21 @@ FOOTER
         </div>
     </section>
 
-    <section id="casestudy-au2" class="fade casestudy">
+    <section id="casestudy" class="fade casestudy">
         <span class="img"></span>
         <div class="content">
             <h3><a href="/pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
 
-    <section id="casestudy-home+" class="fade casestudy">
+    <section id="casestudy" class="fade casestudy">
         <span class="img"></span>
         <div class="content">
             <h3><a href="/pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
         </div>
     </section>
 
-    <section id="casestudy-flip" class="fade casestudy flip">
+    <section id="casestudy" class="fade casestudy flip">
         <span class="img"></span>
         <div class="content">
             <h3><a href="/casestudy/system-ui/" title="">Flip Japan</a></h3>
@@ -87,19 +87,19 @@ FOOTER
     <section id="journal" class="fade casestudy">
         <div class="heading">
             <h2>Design Journal</h2>
-            <p>A sample of day to day work and processes</p>
+            <p>Journals of my day to day processes and insights.</p>
         </div>
         <div class="flex">
             <div class="col">
                 <span class="img"></span>
                 <div class="content">
-                    <h4><a href="/pages/journal/figma-variables/" title="">Optimizing Figma variables<br /> for developer handoff</a></h4>
+                    <h4><a href="/pages/journal/figma-variables/" title="">Optimizing Figma variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
                 <span class="img"></span>
                 <div class="content">
-                    <h4><a href="/pages/journal/design-inspection/" title="">Syncing a Design inspection<br /> alongside UAT</a></h4>
+                    <h4><a href="/pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
@@ -121,13 +121,13 @@ FOOTER
     <section id="showcase" class="fade casestudy">
         <div class="heading">
             <h2>Showcase</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. </p>
+            <p>A showcase of smaller projects &amp; initiatives I have done in my free time.</p>
         </div>
         <div id="casestudy-pulse" class="col">
             <span class="img"></span>
             <div class="content">
-                <h3><a href="/pages/showcase/pulse-football/" title="">Pulse Football</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. </p>
+                <h3><a href="#" title="">Pulse Football</a></h3>
+                <p>Pulse Football was a Design Jam I did one evening with a collegue.<br />Visual & Information Hierachy were areas that became apparent as we brainstormed.</p>
             </div>
         </div>
     </section>
@@ -135,8 +135,19 @@ FOOTER
         <div id="casestudy-adventure" class="col">
             <span class="img"></span>
             <div class="content">
-                <h3><a href="/showcase/adventure-cards/" title="">Every Adventure</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br class="dt-set" /> Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada.</p>
+                <h3><a href="#" title="">Every Adventure</a></h3>
+                <p>I previously worked as a Product designer for an events company.<br class="dt-set" /> Every Adventure was one brand I created from concept through many iterations.</p>
+                <p>This showcase is a retrospective redesign I did over a few evenings.<br /> Mobile first design and Information Architecture we the areas I explored.</p>
+            </div>
+        </div>
+    </section>
+    <section id="showcase" class="fade casestudy">
+        <div id="casestudy-corpjapan" class="col">
+            <span class="img"></span>
+            <div class="content">
+                <h3><a href="#" title="">Japanese Small Businesses</a></h3>
+                <p>These are some freelance design-2-dev projects I worked on.<br />I aimed to complete the process in less than 12 hours.</p>
+                <p>I enjoyed reimursing myself in FE development and analysing Japanese centric UI design.</p>
             </div>
         </div>
     </section>
