--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -42,7 +42,7 @@ FOOTER
             With 20+ years hands on 👋 XP
         </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
-        <a href="/pages/about/" class="button outline" title="">More about me</a>
+        <a href="pages/about/" class="button outline" title="">More about me</a>
     </section>
 
     <section id="casestudy" class="fade casestudy">
@@ -52,28 +52,28 @@ FOOTER
         </div>
         <span class="img"></span>
         <div class="content">
-            <h3><a href="/pages/casestudy/content-design/" title="">Conceptualising the design <br class="dt-set" /> of an au content app</a></h3>
+            <h3><a href="pages/casestudy/content-design/" title="">Conceptualising the design <br class="dt-set" /> of an au content app</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy">
         <span class="img"></span>
         <div class="content">
-            <h3><a href="/pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
+            <h3><a href="pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy">
         <span class="img"></span>
         <div class="content">
-            <h3><a href="/pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
+            <h3><a href="pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy flip">
         <span class="img"></span>
         <div class="content">
-            <h3><a href="/casestudy/system-ui/" title="">Flip Japan</a></h3>
+            <h3><a href="casestudy/system-ui/" title="">Flip Japan</a></h3>
         </div>
     </section>
 
@@ -93,25 +93,25 @@ FOOTER
             <div class="col">
                 <span class="img"></span>
                 <div class="content">
-                    <h4><a href="/pages/journal/figma-variables/" title="">Optimizing Figma variables for developer handoff</a></h4>
+                    <h4><a href="pages/journal/figma-variables/" title="">Optimizing Figma variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
                 <span class="img"></span>
                 <div class="content">
-                    <h4><a href="/pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
+                    <h4><a href="pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
                 <span class="img"></span>
                 <div class="content">
-                    <h4><a href="/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
+                    <h4><a href="pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
                 </div>
             </div>
             <div class="col">
                 <span class="img"></span>
                 <div class="content">
-                    <h4><a href="/pages/journal/content-design/" title="">title</a></h4>
+                    <h4><a href="pages/journal/content-design/" title="">title</a></h4>
                 </div>
             </div>
             </div>
